--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <title>Survey Form</title>
 </head>
 <body>
+  <div class="header-buffer"></div>
   <div id="header">
-   <h1 id="title">Survey Form</h1>
+   <h1 id="title">Silliness Survey Form</h1>
   </div>
+  <div class="header-buffer"></div>
+  <div class="form-buffer"></div>
   <div id="form-body">
-    <p id="description">How's your level of humor doing today?</p>
+    <p id="description">A survey to test your humor levels today.</p>
     <form action="submit" id="survey-form">
       <div class="label-div"><label for="name" id="name-label">Name: </label><input type="text" id="name" class="input-box" name="name" placeholder="Name ..."required></div>
       <div class="label-div"><label for="email" id="email-label">Email: </label><input type="email" id="email" class="input-box" name="email" placeholder="Email ..." required></div>
@@ -25,12 +28,16 @@
           <option value="Shakers">Shakers</option>
         </select>
       </div>
-      <p>Select a single rudimentary radio buttons!</p>
+      <p>Select a single rudimentary radio button!</p>
       <div class="label-div">
         <label for="chippers">Chippers</label>
         <input type="radio" name="rudimentary" id="chippers" value="Chippers" checked>
+      </div>
+      <div class="label-div">
         <label for="chompers">Chompers</label>      
         <input type="radio" name="rudimentary" id="chompers" value="Chompers">
+      </div>
+      <div class="label-div">
         <label for="chappers">Chappers</label>      
         <input type="radio" name="rudimentary" id="chappers" value="Chappers">
       </div>
@@ -38,8 +45,12 @@
       <div class="label-div">
         <label for="slithers">Slithers</label>
         <input type="checkbox" name="checktastic" id="slithers" value="Slithers">
+      </div>
+      <div class="label-div">
         <label for="slathers">Slathers</label>
         <input type="checkbox" name="checktastic" id="slathers" value="Slathers">
+      </div>
+      <div class="label-div">
         <label for="sloth-furs">Sloth-furs</label>
         <input type="checkbox" name="checktastic" id="sloth-furs" value="Sloth-furs">
       </div>
@@ -49,10 +60,11 @@
         <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
       </div>
       <div id="submit-div">
-        <button type="submit" id="submit">Submit!</button>
+        <button type="submit" id="submit">Click this BIG button to submit!</button>
       </div>
     </form>
   </div>
+  <div class="form-buffer"></div>
   <!-- FreeCodeCamp Testing Suite -->
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
