--- a/index.html
+++ b/index.html
@@ -17,49 +17,39 @@
   <div id="form-body">
     <p id="description">A survey to test your humor levels today.</p>
     <form action="submit" id="survey-form">
-      <div class="label-div"><label for="name" id="name-label">Name: </label><input type="text" id="name" class="input-box" name="name" placeholder="Name ..."required></div>
-      <div class="label-div"><label for="email" id="email-label">Email: </label><input type="email" id="email" class="input-box" name="email" placeholder="Email ..." required></div>
-      <div class="label-div"><label for="number" id="number-label">Random Number: </label><input type="number" class="input-box" id="number" name="number" min="1" max="5" placeholder="Number range: 1-5" required></div>
-      <div class="label-div"><label for="dropdown">Select something from the dropdown menu: </label>
-        <select id="dropdown" name="dropdown">
-          <option value="Zingers">Zingers</option>
-          <option value="Burgers">Burgers</option>
-          <option value="Sweets">Sweets</option>
-          <option value="Shakers">Shakers</option>
-        </select>
-      </div>
-      <p>Select a single rudimentary radio button!</p>
-      <div class="label-div">
-        <label for="chippers">Chippers</label>
-        <input type="radio" name="rudimentary" id="chippers" value="Chippers" checked>
-      </div>
-      <div class="label-div">
-        <label for="chompers">Chompers</label>      
-        <input type="radio" name="rudimentary" id="chompers" value="Chompers">
-      </div>
-      <div class="label-div">
-        <label for="chappers">Chappers</label>      
-        <input type="radio" name="rudimentary" id="chappers" value="Chappers">
-      </div>
-      <p>Select as many checktastic checkboxes as you like!</p>
-      <div class="label-div">
-        <label for="slithers">Slithers</label>
-        <input type="checkbox" name="checktastic" id="slithers" value="Slithers">
-      </div>
-      <div class="label-div">
-        <label for="slathers">Slathers</label>
-        <input type="checkbox" name="checktastic" id="slathers" value="Slathers">
-      </div>
-      <div class="label-div">
-        <label for="sloth-furs">Sloth-furs</label>
-        <input type="checkbox" name="checktastic" id="sloth-furs" value="Sloth-furs">
-      </div>
-      <div id="comment-area">
-        <p>Please enter any additional comments here in this little box (which has the ability to amazingly expand):</p>
-        <p>(P.S. Please don't comment about the split infinitive.)</p>
-        <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
-      </div>
-      <div id="submit-div">
+      <label for="name" id="name-label" class="text-right">Name: </label><input type="text" id="name" class="input-box" name="name" placeholder="Name ..."required>
+      <label for="email" id="email-label" class="text-right">Email: </label><input type="email" id="email" class="input-box" name="email" placeholder="Email ..." required>
+      <label for="number" id="number-label" class="text-right">Random Number: </label><input type="number" class="input-box" id="number" name="number" min="1" max="5" placeholder="Number range: 1-5" required>
+      <label for="dropdown" class="text-right">Select something from the dropdown menu: </label>
+      <select id="dropdown" name="dropdown">
+        <option value="Zingers">Zingers</option>
+        <option value="Burgers">Burgers</option>
+        <option value="Sweets">Sweets</option>
+        <option value="Shakers">Shakers</option>
+      </select>
+      <p class="fill-column">Select a single rudimentary radio button!</p>
+
+      <label for="chippers" class="text-right">Chippers</label>
+      <input type="radio" name="rudimentary" id="chippers" value="Chippers" checked>
+      <label for="chompers" class="text-right">Chompers</label>      
+      <input type="radio" name="rudimentary" id="chompers" value="Chompers">
+      <label for="chappers" class="text-right">Chappers</label>      
+      <input type="radio" name="rudimentary" id="chappers" value="Chappers">
+
+      <p class="fill-column">Select as many checktastic checkboxes as you like!</p>
+
+      <label for="slithers" class="text-right">Slithers</label>
+      <input type="checkbox" name="checktastic" id="slithers" value="Slithers">
+      <label for="slathers" class="text-right">Slathers</label>
+      <input type="checkbox" name="checktastic" id="slathers" value="Slathers">
+      <label for="sloth-furs" class="text-right">Sloth-furs</label>
+      <input type="checkbox" name="checktastic" id="sloth-furs" value="Sloth-furs">
+      
+      <p class="fill-column">Please enter any additional comments here in this little box (which has the ability to amazingly expand):</p>
+      <!-- <div id="textarea-div" class="fill-column"> -->
+        <textarea name="comments" id="comments" class="fill-column" rows="8"></textarea>
+      <!-- </div> -->
+      <div id="submit-div" class="fill-column">
         <button type="submit" id="submit">Click this BIG button to submit!</button>
       </div>
     </form>
