--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./css/main.css">
   <title>Survey Form</title>
 </head>
@@ -46,11 +47,11 @@
       <input type="checkbox" name="checktastic" id="sloth-furs" value="Sloth-furs">
       
       <p class="fill-column">Please enter any additional comments here in this little box (which has the ability to amazingly expand):</p>
-      <!-- <div id="textarea-div" class="fill-column"> -->
-        <textarea name="comments" id="comments" class="fill-column" rows="8"></textarea>
-      <!-- </div> -->
+      <div id="textarea-div" class="fill-column">
+        <textarea name="comments" id="comments" rows="8"></textarea>
+      </div>
       <div id="submit-div" class="fill-column">
-        <button type="submit" id="submit">Click this BIG button to submit!</button>
+        <button type="submit" id="submit" class="fill-column">Click this BIG button to submit!</button>
       </div>
     </form>
   </div>
