--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
   </div>
   <div class="form-buffer"></div>
   <!-- FreeCodeCamp Testing Suite -->
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
 </html>
